syntax = "proto3";
package requestTest;
option java_multiple_files = true;





service RequestNodes {
  rpc SetTurnOn (TurnOnRequest) returns (SettingReply) {}

}

message TurnOnRequest {
  string androidId = 1;
  uint64 powerOnTime = 2;
}

message SettingReply {
  uint32 intervalCon = 1;
  uint32 startTime = 2;
}

